# arkyn-linux

./: .gitignore  README.md  pyproject.toml
flavors/: README.md
flavors/ATLAS/: README.md  install.sh
flavors/ATLAS/configs/plasma/: README.md  kdeglobals  kscreenlockerrc  kwinrc
flavors/ATLAS/configs/sddm/: README.md  sddm.conf
flavors/ATLAS/configs/theme/: ATLAS.colors  README.md  metadata.desktop
flavors/NOVA/: README.md
flavors/ORION/: README.md
flavors/SENTINEL/: README.md
scripts/: install.sh  install_termux.sh
src/v0/arkyn/: __init__.py  cli.py  core.py  plugin_manager.py
src/v0/arkyn/plugins/example_plugin/: __init__.py  plugin.py
src/v0/arkyn/tui/: app.py
